syntax = "proto3";

package inventory;

service InventoryService {
    rpc PriceDetails (PriceDetailsRequest) returns (PriceDetailsResponse);
    rpc SubCategoryDetails (SubCategoryDetailsRequest) returns (SubCategoryDetailsResponse);
    rpc GetAveragePrice (GetAveragePriceRequest) returns (GetAveragePriceResponse);
}

message AddonChoice {
    string choiceName = 1;
    double choicePrice = 2;
}

message AddonGroup {
    string groupName = 1;
    repeated AddonChoice choices = 2;
}

message ProductDetails {
    string productId = 1;
    string name = 2;
    string imgUrl = 3;
    double price = 4;
    double actualPrice = 5;
    int32 cartQuantity = 6;
    double weight = 7;
    double packagingCharge = 8;
    repeated AddonGroup addons = 9; 
}

message DeliveryTypeDetails {
    string _id = 1;
    string name = 2;
    bool isActive = 3;
    string createdAt = 4;
    string updatedAt = 5;
}

message PriceDetails {
    repeated ProductDetails products = 1;
    double subTotal = 2;
    double gstCost = 3;
    double grandTotal = 4;
    double actualPrice = 5;
    double productPrice = 6;
    double deliveryCharge = 7;
    double totalAmount = 8;
    double savedAmount = 9;
    double discount = 10;
    double packagingCharge = 11;
    double platformFee = 12;
    string merchantName = 13;
    string merchantId = 14;
    repeated DeliveryTypeDetails deliveryTypes = 15;
    bool scheduledOrder = 16;
    string cartId = 17;
    bool couponIsValid = 18;
    CouponDetails couponDetails = 19;
    DeliveryTypeDetails selectedDeliveryType = 20;
}

message CouponDetails {
    string couponCode = 1;
    double discountAmount = 2;
    bool isValid = 3;
    string message = 4;
}

message PriceDetailsRequest {
    string cartId = 1;
    string customerId = 2;
    string deliveryType = 3;
    string couponCode = 4;
    string addressId = 5;
}

message PriceDetailsResponse {
    bool success = 1;
    string message = 2;
    PriceDetails data = 3;
}

service PriceService {
    rpc GetPriceDetails(PriceDetailsRequest) returns (PriceDetailsResponse);
}

message SubCategoryDetails {
    string name = 1;
    string imageUrl = 2;
    bool isActive = 3;
    string description = 4;
}

message SubCategoryDetailsRequest {
    string subCategoryId = 1;
}

message SubCategoryDetailsResponse {
    bool success = 1;
    string message = 2;
    SubCategoryDetails subCategory = 3;
}

message GetAveragePriceRequest {
    string merchantId = 1;
}

message GetAveragePriceResponse {
    bool success = 1;
    string message = 2;
    double averageSellingPrice = 3;
}
